# copilot

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COPILT_PROJECT_OVERVIEW.md  DEVOPS_WORKFLOW_WITH_BMAD.md  DEV_WORKFLOW_WITH_CURSOR.md  README.md  TESTING.md  ai.md  docker-compose.yml  package-lock.json  package.json  push_commit_branch_strategie.md  pyproject.toml  pytest.ini
.github/workflows/: backend_ci.yml  ci.yml
app/: main.py
app/agents/: agent_loader.py  base.py  project_agent.py  registry.py
app/api/routes/: health.py
app/core/config/: settings.py
app/core/dispatcher/: dispatcher.py
app/core/logging/: logger.py
app/core/services/: store_context_item.py
app/dashboard/: routes.py
app/dashboard/templates/: admin.html
app/models/schemas/: context_item.py
app/routes/: dashboard.py  health.py  input.py
app/schemas/: schemas.py
app/services/: store_context_item.py  supabase_client.py
app/templates/: dashboard.html
app/tests/api/: test_health_redis.py  test_routes.py
app/tests/core/: test_dispatcher.py
app/tests/mocks/: agents.py
app/tests/routes/: test_health.py
copilot/copilot_frontend/: package.json
copilot_backend/: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  package-lock.json  pyproject.toml
copilot_backend/app/: __init__.py  main.py
copilot_frontend/: .eslintrc.json  index.html  package-lock.json  tailwind.config.js  tsconfig.json
copilot_frontend/.next/: app-build-manifest.json
copilot_frontend/app/: layout.tsx
(+221 files in other folders)
