[project]
name = "copilot-backend"
version = "0.1.0"
description = "AI Business Suite Backend"
authors = [
    {name = "Yannick",email = "yannickmacgillavry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "supabase (>=2.16.0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "respx (>=0.20.0,<1.0.0)",
    "mypy (>=1.10.0,<2.0.0)",
    "ruff (>=0.4.0,<1.0.0)",
    "black (>=24.0.0,<25.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.0,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

